<resources>
    <string name="app_name">MBCP</string>

    <string-array name="complain_type">
        <item>Mobile Payment Not Working</item>
        <item>Card payment not working</item>
        <item>Extra fare is charged</item>
        <item>Lost Travel card</item>
    </string-array>


    <string-array name="payment_method">

        <item>Bkash</item>
        <item>Nagad</item>
        <item>Upai</item>
        <item>MyCash</item>
        <item>Ucash</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="update_pin">Update PIN</string>
    <string name="old_pin">Old Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="login">login</string>
    <string name="please_enter_card_number_and_pin_below_to_login">Please enter card number and pin below to login</string>
    <string name="card_number">Card Number</string>
    <string name="pin">PIN</string>
    <string name="login_big">LOGIN</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="train_line">Train Line</string>
    <string name="start_station">Start Station</string>
    <string name="destination_station">Destination Station</string>
    <string name="card_no">Card No</string>
    <string name="submit">Submit</string>
    <string name="press_send_verification_code_button_to_send">Press send verification code button to send a verification code to this number.</string>
    <string name="demo_number">01303733598</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="register_complaint">REGISTER COMPLAINT</string>
    <string name="metro_card_portal">METRO CARD PORTAL</string>
    <string name="fare_and_route">Fare and Route</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_number">Payment Number</string>
    <string name="recharge_amount">Recharge Amount</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="complain_type">Complain Type</string>
    <string name="metro_card_portal_1">Metro Card Portal</string>
    <string name="copyright_metro_bangla_rail_2021">Copyright © Metro Bangla Rail-2021</string>
    <string name="textview">TextView</string>
    <string name="demo_card_user_name">Hey! Md.Ebna amir</string>
    <string name="your_card_balance_is">Your Card Balance is</string>
    <string name="recharge">Recharge</string>
    <string name="view_qr_code">View QR Code</string>
    <string name="log_out">Log out</string>
    <string name="md_ebna_amir_foysal">Md.Ebna Amir Foysal</string>
    <string name="_01727749038">01727749038</string>
    <string name="account_no">Account No</string>
    <string name="_123456789">123456789</string>
    <string name="change_pin">Change PIN</string>
    <string name="continue_demo">Continue</string>

</resources>

