<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Metro_Card_Portal.Card_Portal_Login_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/please_enter_card_number_and_pin_below_to_login"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_card_no"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/card_number"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAllCaps="false"
        android:textColor="#1D2226"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_pin"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/metro_card_portal_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_main"
        android:text="@string/login_big"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_pin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/forgot_pin"
        android:textColor="#1F54C3"
        android:textSize="16sp" />

</LinearLayout>
