<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPIN.Forgot_PIN_verifyPhone">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/press_send_verification_code_button_to_send"
            android:fontFamily="@font/roboto_light"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/red"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/numberChecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/card_user_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_number" />

        </LinearLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgot_pin_send_verification_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_main"
            android:text="@string/send_verification_code"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_phone_verifcation_code"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="false"
            android:textColor="#1D2226"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgot_pin_verify_phone_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_main"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>