<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Metro_Card_Portal.Fragment_Card_User_Profile">

    <RelativeLayout
        android:id="@+id/name_feild_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_label_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/name"
            android:textColor="@color/red" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_label_text_view"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="37dp"
            android:text="@string/md_ebna_amir_foysal"
            android:textColor="@color/red" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phone_feild_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_feild_layout"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_call_button_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phone_label_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/phone"
            android:textColor="@color/red" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_phone_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_label_text_view"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="37dp"
            android:text="@string/_01727749038"
            android:textColor="@color/red" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/acc_feild_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_feild_layout"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_account_balance" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message_label_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/account_no"
            android:textColor="@color/red" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_account_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_label_text_view"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="37dp"
            android:text="@string/_123456789"
            android:textColor="@color/red" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/change_password_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/acc_feild_layout"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        tools:ignore="RtlSymmetry">

        <androidx.appcompat.widget.AppCompatImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_lock" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/change_password_label_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/change_pin"
            android:textColor="@color/red" />

    </RelativeLayout>

</RelativeLayout>