<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Metro_Card_Portal.Fragment_Card_Home">

        <LinearLayout
            android:id="@+id/first_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/demo_card_user_name"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/your_card_balance_is"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/card_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text=""
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="40sp"
                android:visibility="visible" />


            <ProgressBar
                android:id="@+id/balance_retrieve_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:indeterminateDrawable="@drawable/circle_progressbar"
                android:visibility="gone" />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/recharge_balance_Btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_card_portal"
                android:text="@string/recharge"
                android:textAllCaps="true"
                android:textColor="@color/red" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/view_QR_code_Btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_card_portal"
                android:text="@string/view_qr_code"
                android:textAllCaps="true"
                android:textColor="@color/red" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout_Btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_card_portal"
                android:text="@string/log_out"
                android:textAllCaps="true"
                android:textColor="@color/red" />


        </LinearLayout>



</LinearLayout>