<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Metro_Card_Portal.Card_Recharge_Balance">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="0dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="57dp">

        <AutoCompleteTextView
            android:id="@+id/payment_method_auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:paddingStart="20dp"
            android:text="@string/payment_method"
            android:textColor="@color/red"
            tools:ignore="LabelFor,RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_payment_Number"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/payment_number"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_recharge_amount"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/recharge_amount"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="false"
            android:textColor="#1D2226"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_recharge_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_main"
            android:gravity="center"
            android:text="@string/proceed_to_payment"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>