<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fare_And_Route_Activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/train_line"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/line_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:spinnerMode="dropdown"
            android:theme="@style/Spinner"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/start_station"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/station_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:spinnerMode="dropdown"
            android:theme="@style/Spinner"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/destination_station"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/next_station_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:spinnerMode="dropdown"
            android:theme="@style/Spinner"
            tools:ignore="RtlSymmetry" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_fare_and_route_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_main"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>